--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 .container {
   max-width: 1170px;
   margin: 0 auto;
+  height: 100%;
 }
 section {
   padding: 50px 0;
@@ -43,7 +44,11 @@ a.btn:hover {
 /* ====Header Area==== */
 
 .header_area {
-  background: rgba(100, 131, 246, 0.5);
+  background: #3c50e0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .header_content {
@@ -68,3 +73,58 @@ a.btn:hover {
   color: var(--clr_white);
 }
 /* ====Header Area==== */
+
+/* ==== Hero area ==== */
+
+.hero_area {
+  padding-top: 80px;
+  background: var(--clr_btn_bg_1);
+  height: 100vh;
+}
+.hero_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+.hero_heading h1 {
+  font-size: 72px;
+  text-transform: capitalize;
+  color: var(--clr_white);
+  max-width: 600px;
+}
+.hero_heading p {
+  font-size: 20px;
+  color: var(--clr_white);
+  max-width: 400px;
+  line-height: 1.5;
+  padding: 30px 0;
+}
+.hero_btns a:first-child {
+  background: var(--clr_btn_bg_2);
+}
+.hero_btns a:last-child {
+  background: transparent;
+  border: 2px solid var(--clr_white);
+}
+.hero_btns a:last-child:hover {
+  color: var(--clr_white);
+}
+.hero_btns a:first-child:hover {
+  background: transparent;
+  border: 2px solid var(--clr_btn_bg_2);
+  color: var(--clr_white);
+}
+.hero_img {
+  /* position: relative; */
+  align-self: flex-start;
+  padding-top: 20px;
+  margin-right: auto;
+}
+.hero_img picture:last-child {
+  position: absolute;
+  bottom: 10%;
+  right: 12%;
+  zoom: 80%;
+}
+/* ==== Hero area ==== */
