--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   height: 100%;
 }
 section {
-  padding: 50px 0;
+  padding: 60px 0;
 }
 h1,
 h2,
@@ -130,8 +130,8 @@ a.btn:hover {
 /* ==== Hero area ==== */
 
 /* ====Our Service Area ==== */
-.service_area{
-  padding-bottom: 300px;
+.service_area {
+  padding-bottom: 250px;
 }
 .service_content {
   display: flex;
@@ -157,3 +157,62 @@ a.btn:hover {
 }
 
 /* ====Our Service Area ==== */
+
+/* ====Featured Lesson Area ==== */
+.featured_lessons_area {
+  background-color: #ebf3ff;
+}
+.featured_lessons_content {
+  margin-top: -260px;
+}
+.featured_lessons_slider {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+.featured_heading {
+  padding: 50px 0;
+}
+.item {
+  /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.16); */
+  border: 2px solid #e5e5e5;
+  padding: 25px 15px;
+  border-radius: 15px;
+  background: var(--clr_white);
+}
+.slider_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.slider_text {
+  padding: 20px 10px 0;
+}
+.slider_text h5 {
+  font-size: 14px;
+  color: var(--color);
+}
+.slider_text h3 {
+  font-size: 20px;
+  line-height: 30px;
+  padding: 15px 0 12px;
+}
+.lesson_count_and_time {
+  display: flex;
+  justify-content: space-around;
+  gap: 30px;
+  padding: 20px 0;
+}
+.lesson_count_and_time p {
+  color: #81838c;
+  font-size: 14px;
+}
+.lesson_count_and_time p i {
+  margin-right: 10px;
+}
+.explore_all_btn {
+  text-align: center;
+  margin-top: 70px;
+}
+/* ====Featured Lesson Area ==== */
