--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   height: 100%;
 }
 section {
-  padding: 60px 0;
+  padding: 70px 0;
 }
 h1,
 h2,
@@ -49,6 +49,7 @@ a.btn:hover {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 99999;
 }
 
 .header_content {
@@ -216,3 +217,68 @@ a.btn:hover {
   margin-top: 70px;
 }
 /* ====Featured Lesson Area ==== */
+
+/*====Career Area ====*/
+
+.career_content {
+  display: flex;
+  gap: 150px;
+  padding-top: 30px;
+}
+.career_img {
+  position: relative;
+  z-index: 6666;
+}
+.career_img::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  right: -30px;
+  top: -30px;
+  border-radius: 10px;
+  border: 2px solid #f7b26d;
+  z-index: -1;
+}
+
+.career_text h3 {
+  font-size: 42px;
+  line-height: 55px;
+  max-width: 500px;
+}
+.career_text > p {
+  font-size: 20px;
+  line-height: 34px;
+  color: #81838c;
+  padding: 35px 0;
+  max-width: 500px;
+}
+.career_list ul li {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 50px;
+  font-size: 20px;
+}
+.career_list .icon {
+  display: flex;
+  width: 60px;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.16);
+}
+.career_list .icon i {
+  color: #707070;
+}
+.career_list ul li h4 {
+  font-size: 20px;
+}
+.career_list ul li p {
+  font-size: 16px;
+  line-height: 28px;
+  color: #81838c;
+  max-width: 300px;
+  margin-top: 20px;
+}
+/*====Career Area ====*/
