featured area shape added

--- a/css/styles.css
+++ b/css/styles.css
@@ -539,8 +539,31 @@ span.shape:nth-child(5) {
 }
 .feature_list span.f_shape {
   position: absolute;
-  display: none;
+  z-index: -1;
 }
+.feature_list span.f_shape:nth-child(1) {
+  top: 10%;
+  right: -4%;
+  z-index: 5;
+}
+.feature_list span.f_shape:nth-child(2) {
+  top: -4%;
+  right: 5%;
+}
+.feature_list span.f_shape:nth-child(3) {
+  bottom: 0%;
+  left: -6%;
+}
+.feature_list span.f_shape:nth-child(4) {
+  width: 30px;
+  height: 30px;
+  border: 5px solid #f07867;
+  top: 40%;
+  left: -2%;
+  border-radius: 50%;
+  z-index: 1;
+}
+
 .feature_list ul li {
   background: #ebf3ff;
   padding: 30px;
@@ -677,10 +700,8 @@ span.shape:nth-child(5) {
 .footer_copyright_content ul {
   gap: 20px;
 }
-.footer_copyright_content ul li a{
+.footer_copyright_content ul li a {
   color: #687497;
-
-  
 }
 .footer_copyright_content ul li a :hover {
   color: var(--clr_white);
